# wdt

./: .gitmodules  .gitmoudle  CMakeList.txt  CMakeLists.txt  build.sh  build_wdt.sh
CMakeModules/: FindWasm.cmake  InstallDirectoryPermissions.cmake  wasm.cmake
abi-gen/: CMakeLists.txt  README.md
abi-gen/include/: abi_gen.h  def.h
abi-gen/include/nlohmann/: json.hpp
abi-gen/src/: abi_gen.cpp  def.cpp  main.cpp
bc/include/: sysApi.h
dev/: CMakeLists.txt
dev/hello/: CMakeLists.txt  hello.cpp
lib/: CMakeList.txt  CMakeLists.txt
lib/hello/: hello.cpp
lib/libc++/: CMakeList.txt  CMakeLists.txt
lib/musl/: CMakeLists.txt
scripts/: build_ubuntu.sh
wdtool/: CMakeLists.txt  wdtool.in
